--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ go:
 before_install:
 - openssl aes-256-cbc -K $encrypted_a0d7979d78c8_key -iv $encrypted_a0d7979d78c8_iv
   -in ./.travis/id_rsa.enc -out ./.travis/id_rsa -d
+
+after_install:
+- sh .travis/deploy.sh
