--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ go:
 - '1.3'
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_a0d7979d78c8_key -iv $encrypted_a0d7979d78c8_iv
-  -in ./.travis/id_rsa.enc -out ./.travis/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_c574e37cc2d7_key -iv $encrypted_c574e37cc2d7_iv
+  -in .travis/id_rsa.enc -out .travis/id_rsa -d
 
 after_install:
 - sh .travis/deploy.sh
