--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: go
 
 go:
-- '1.0'
-- '1.3'
+- master
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_c574e37cc2d7_key -iv $encrypted_c574e37cc2d7_iv
   -in .travis/id_rsa.enc -out .travis/id_rsa -d
+
+install: true
 
 after_install:
 - sh .travis/deploy.sh
