--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,25 @@
 language: go
+
 go:
 - master
+
 addons:
   ssh_known_hosts: 78.248.188.120
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_c574e37cc2d7_key -iv $encrypted_c574e37cc2d7_iv
   -in .travis/id_rsa.enc -out .travis/id_rsa -d
-install: true
+
+install:
+- go get golang.org/x/tools/cmd/cover
+- go get github.com/mattn/goveralls
+
+script:
+- go test -v -covermode=count -coverprofile=coverage.out ./...
+- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
+
 after_success:
 - sh .travis/deploy.sh
+
 env:
 - GO111MODULE=on
